# Ocean

./: .gitignore  CMakeLists.txt  FourierTransform.cpp  FourierTransform.h  LICENSE  OceanDefine.h  README.md  WavesGenerator.cpp  WavesGenerator.h  main.cpp
Resources/Shaders/: blit.frag  copy.comp  fft.comp  luminance.comp  scene.frag  scene.vert
